 + Keep round score displayed after round ends, remove round score announcer message
 * Fix rare Lua error message spam at end of game
 * Fix round score and other info numbers messing up after screen resize

A Classic Fairytale:
 * Fix clan membership of princess in some missions
 * Mission 5: Tribe was not in same clan as Natives, screwing up stats a bit

A Space Adventure:
 * Fix clan membership of PAotH in main Death Planet mission

Content:
 + New Sudden Death water texture for CrazyMission theme
 + Add dust flakes for Cheese and CrazyMission themes

Lua API:
 + New call: Retreat(time [, respectGetAwayTimeFactor): Force current turn into retreating mode
 + New call: GetAmmoTimer(gearUid, ammoType): Returns current set timer for given ammoType and hog gear in ms. Returns nil for non-timerable ammo
 + New call: EnableSwitchHog(): Enable hog switching
 + New call: GetAmmo(ammoType): Returns ammo configuration (corresponds to SetAmmo)
 + New parameter: SetAmmoTexts: 5th param. showExtra: Set to false to hide texts like “Not yet available”
 + New parameter: ShowMission: 6th param. forceDisplay: Set to true to prevent this particular mission panel to be hidden manually by player
 + New Lua library: Achievements
 * Changed global: lfCurrentHog becomes lfCurHogCrate
 * Fixed variable: TotalRounds was -1 (instead of 0) in first real round after hog placement phase
 * AI sometimes intentionally shot hedgehogs with aihDoesntMatter set

====================== 0.9.24.1 ====================
 * Fix crash when portable portal device is fired at reduced graphics quality
 * Fix possible crash when starting Hedgewars frontend in fullscreen mode

====================== 0.9.24 ======================
Game:
 + New weapon: Minigun
 + New game modifier: Enable switch hedgehog at start of turn
 + Change weapon icons: Mudball, air mine
 + Add healing visual effect in Paramedics mode and a few scripts
 + Show remaining ammo when using Birdy egg or RC Plane bomb